--- a/Uriel/Laboratorio II/JS/Leccion01/index.html
+++ b/Uriel/Laboratorio II/JS/Leccion01/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Javascript</title>
 </head>
 <body>
-	<script src="01-01-holamundo.js">
-		
-	</script>
+	<script src="HolaMundo.js"></script>
 </body>
 </html>
