--- a/Uriel/Laboratorio II/JS/Leccion02/index.html
+++ b/Uriel/Laboratorio II/JS/Leccion02/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="02-01-TiposDeDatos.js"></script>
+    <script src="02-01-ConcatenacionDeCadenas.js"></script>
 </body>
 </html>
